src/byondapi/_byondapi.h


typedef unsigned char  u1c;
typedef signed   short s2c;
	typedef unsigned int   u4c;
	typedef unsigned long  u4c;
typedef u1c ByondValueType;
typedef union ByondValueData {
	u4c ref;	
	float num;	
} ByondValueData;
typedef struct CByondValue {
	ByondValueType type;	
	u1c junk1, junk2, junk3;	
	ByondValueData data;	
} CByondValue;
typedef struct CByondXYZ {
	s2c x, y, z;	
	s2c junk;		
} CByondXYZ;
typedef struct CByondPixLoc {
	float x, y;		
	s2c z;			
	s2c junk;		
} CByondPixLoc;
typedef CByondValue (*ByondCallback)(void *);
DUNGPUB CByondValue Byond_ThreadSync(ByondCallback callback, void *data, bool block);
DUNGPUB u4c Byond_GetStrId(char const *str);	
DUNGPUB bool Byond_ReadVar(CByondValue const *loc, char const *varname, CByondValue *result);
DUNGPUB bool Byond_ReadListIndex(CByondValue const *loc, CByondValue const *idx, CByondValue *result);
DUNGPUB bool Byond_WriteListIndex(CByondValue const *loc, CByondValue const *idx, CByondValue const *val);
DUNGPUB bool Byond_ReadPointer(CByondValue const *ptr, CByondValue *result);
DUNGPUB bool Byond_WritePointer(CByondValue const *ptr, CByondValue const *val);
DUNGPUB bool Byond_CallProc(CByondValue const *src, char const *name, CByondValue const *arg, u4c arg_count, CByondValue *result);
DUNGPUB bool Byond_CallProcByStrId(CByondValue const *src, u4c name, CByondValue const *arg, u4c arg_count, CByondValue *result);
DUNGPUB bool Byond_CallGlobalProc(char const *name, CByondValue const *arg, u4c arg_count, CByondValue *result);	
DUNGPUB bool Byond_CallGlobalProcByStrId(u4c name, CByondValue const *arg, u4c arg_count, CByondValue *result);	
DUNGPUB bool Byond_ToString(CByondValue const *src, char *buf, u4c *buflen);
DUNGPUB bool Byond_Block(CByondXYZ const *corner1, CByondXYZ const *corner2, CByondValue *list, u4c *len);
DUNGPUB bool Byond_Length(CByondValue const *src, CByondValue *result);
DUNGPUB bool Byond_LocateIn(CByondValue const *type, CByondValue const *list, CByondValue *result);
DUNGPUB bool Byond_LocateXYZ(CByondXYZ const *xyz, CByondValue *result);
DUNGPUB bool Byond_New(CByondValue const *type, CByondValue const *arg, u4c arg_count, CByondValue *result);
DUNGPUB bool Byond_NewArglist(CByondValue const *type, CByondValue const *arglist, CByondValue *result);	
DUNGPUB bool Byond_Refcount(CByondValue const *src, u4c *result);	
DUNGPUB bool Byond_XYZ(CByondValue const *src, CByondXYZ *xyz);	
DUNGPUB bool Byond_PixLoc(CByondValue const *src, CByondPixLoc *pixloc);	
DUNGPUB bool Byond_BoundPixLoc(CByondValue const *src, u1c dir, CByondPixLoc *pixloc);	
DUNGPUB void ByondValue_IncRef(CByondValue const *src);
DUNGPUB void ByondValue_DecRef(CByondValue const *src);
DUNGPUB void ByondValue_DecTempRef(CByondValue const *src);