src/byondapi/raw/_byondapi_raw.zig


/// Reads an item from a list.
/// Blocks if not on the main thread.
/// @param loc The list
/// @param idx The index in the list (may be a number, or a non-number if using associative lists)
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_ReadListIndex(loc: *const CByondValue, idx: *const CByondValue, result: *CByondValue) bool;

/// Writes an item to a list. Blocks if not on the main thread.
///
/// @param loc The list
/// @param idx The index in the list (may be a number, or a non-number if using associative lists)
/// @param val New value
/// @return True on success
pub extern fn Byond_WriteListIndex(loc: *const CByondValue, idx: *const CByondValue, val: *const CByondValue) bool;

/// Reads from a BYOND pointer. Blocks if not on the main thread.
///
/// @param ptr The BYOND pointer
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_ReadPointer(ptr: *const CByondValue, result: *CByondValue) bool;

/// Writes to a BYOND pointer. Blocks if not on the main thread.
///
/// @param ptr The BYOND pointer
/// @param val New value
/// @return True on success
pub extern fn Byond_WritePointer(ptr: *const CByondValue, val: *const CByondValue) bool;

// Proc calls:
//
// arg is an array of arguments; can be null arg_count is 0.
//
// The call is implicitly a waitfor=0 call; if the callee sleeps it will return
// immediately and finish later.

/// Calls an object proc by name.
/// The proc call is treated as waitfor=0 and will return immediately on sleep.
/// Blocks if not on the main thread.
/// @param src The object that owns the proc
/// @param name Proc name as null-terminated string
/// @param arg Array of arguments
/// @param arg_count Number of arguments
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_CallProc(src: *const CByondValue, name: [*:0]const u8, arg: ?[*]const CByondValue, arg_count: u4c, result: *CByondValue) bool;

/// Calls an object proc by name, where the name is a string ID.
/// The proc call is treated as waitfor=0 and will return immediately on sleep.
/// Blocks if not on the main thread.
/// @param src The object that owns the proc
/// @param name Proc name as string ID
/// @param arg Array of arguments
/// @param arg_count Number of arguments
/// @param result Pointer to accept result
/// @return True on success
/// @see Byond_GetStrId()
pub extern fn Byond_CallProcByStrId(src: *const CByondValue, name: u4c, arg: ?[*]const CByondValue, arg_count: u4c, result: *CByondValue) bool;

/// Calls a global proc by name.
/// The proc call is treated as waitfor=0 and will return immediately on sleep.
/// Blocks if not on the main thread.
/// @param name Proc name as null-terminated string
/// @param arg Array of arguments
/// @param arg_count  Number of arguments
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_CallGlobalProc(name: [*:0]const u8, arg: ?[*]const CByondValue, arg_count: u4c, result: *CByondValue) bool; // result MUST be initialized first!

/// Calls a global proc by name, where the name is a string ID.
/// The proc call is treated as waitfor=0 and will return immediately on sleep.
/// Blocks if not on the main thread.
/// @param name Proc name as string ID
/// @param arg Array of arguments
/// @param arg_count Number of arguments
/// @param result Pointer to accept result
/// @return True on success
/// @see Byond_GetStrId()
pub extern fn Byond_CallGlobalProcByStrId(name: u4c, arg: ?[*]const CByondValue, arg_count: u4c, result: *CByondValue) bool; // result MUST be initialized first!

/// Uses BYOND's internals to represent a value as text
/// Blocks if not on the main thread.
/// @param src The value to convert to text
/// @param buf char array, allocated by caller (can be null if querying length)
/// @param buflen Pointer to length of array in bytes; receives the string length (including trailing null) on success, or required length of array if not big enough
/// @return True on success; false with *buflen=0 for failure; false with *buflen=required size if array is not big enough
pub extern fn Byond_ToString(src: *const CByondValue, buf: ?[*]u8, buflen: *u4c) bool;

// Other builtins

/// Equivalent to calling block(x1,y1,z1, x2,y2,z2).
/// Blocks if not on the main thread.
/// @param corner1 One corner of the block
/// @param corner2 Another corner of the block
/// @param list CByondValue array, allocated by caller (can be null if querying length)
/// @param len Pointer to length of array (in items); receives the number of items read on success, or required length of array if not big enough
/// @return True on success; false with *len=0 for failure; false with *len=required size if array is not big enough
pub extern fn Byond_Block(corner1: *const CByondXYZ, corner2: *const CByondXYZ, list: ?[*]CByondValue, len: *u4c) bool;

/// Equivalent to calling length(value).
/// Blocks if not on the main thread.
pub extern fn Byond_Length(src: *const CByondValue, result: *CByondValue) bool;

/// Equivalent to calling locate(type), or locate(type) in list.
/// Blocks if not on the main thread.
/// @param type The type to locate
/// @param list The list to locate in; can be a null pointer instead of a CByondValue to locate(type) without a list
/// @param result Pointer to accept result; can be null if nothing is found
/// @return True on success (including if nothing is found); false on error
pub extern fn Byond_LocateIn(@"type": *const CByondValue, list: ?*const CByondValue, result: *CByondValue) bool;

/// Equivalent to calling locate(x,y,z)
/// Blocks if not on the main thread.
/// Result is null if coords are invalid.
/// @param xyz The x,y,z coords
/// @param result Pointer to accept result
/// @return True (always)
pub extern fn Byond_LocateXYZ(xyz: *const CByondXYZ, result: *CByondValue) bool;

/// Equivalent to calling new type(...)
/// Blocks if not on the main thread.
/// @param type The type to create (type path or string)
/// @param arg Array of arguments
/// @param arg_count Number of arguments
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_New(@"type": *const CByondValue, arg: ?[*]const CByondValue, arg_count: u4c, result: *CByondValue) bool;

/// Equivalent to calling new type(arglist)
/// Blocks if not on the main thread.
/// @param type The type to create (type path or string)
/// @param arglist Arguments, as a reference to an arglist
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_NewArglist(@"type": *const CByondValue, arglist: *const CByondValue, result: *CByondValue) bool; // result MUST be initialized first!

/// Equivalent to calling refcount(value)
/// Blocks if not on the main thread.
/// @param src The object to refcount
/// @param result Pointer to accept result
/// @return True on success
pub extern fn Byond_Refcount(src: *const CByondValue, result: *u4c) bool; // result MUST be initialized first!

/// Get x,y,z coords of an atom
/// Blocks if not on the main thread.
/// @param src The object to read
/// @param xyz Pointer to accept CByondXYZ result
/// @return True on success
pub extern fn Byond_XYZ(src: *const CByondValue, xyz: *CByondXYZ) bool; // still returns true if the atom is off-map, but xyz will be 0,0,0

/// Get pixloc coords of an atom
/// Blocks if not on the main thread.
/// @param src The object to read
/// @param pixloc Pointer to accept CByondPixLoc result
/// @return True on success
pub extern fn Byond_PixLoc(src: *const CByondValue, pixloc: *CByondPixLoc) bool; // still returns true if the atom is off-map, but pixloc will be 0,0,0

/// Get pixloc coords of an atom based on its bounding box
/// Blocks if not on the main thread.
/// @param src The object to read
/// @param dir The direction
/// @param pixloc Pointer to accept CByondPixLoc result
/// @return True on success
pub extern fn Byond_BoundPixLoc(src: *const CByondValue, dir: u1c, pixloc: *CByondPixLoc) bool; // still returns true if the atom is off-map, but pixloc will be 0,0,0

// REFERENCE COUNTING
//
// BYOND uses reference counting internally with IncRefCount() and
// DecRefCount() functions, so when an object runs out of references it will
// be garabge-collected. Byondapi keeps a separate reference count for
// temporary and persistent references.
//
// Results from most Byondapi calls, for instance the value that will be
// stored in the result pointer for Byond_ReadVar(), are refcounted.
//
// Temporary references are made when you call Byondapi on the main thread.
// They will be removed at the end of the current server tick. You can call
// Byond_IncRef() to make a persistent reference if you need to hold onto it
// for longer. You can also get rid of a temporary reference right away by
// calling ByondValue_DecTempRef(), which might trigger garbage collection if
// the object is no longer used.
//
// Byondapi calls made from other threads, OR during a Byond_ThreadSync()
// callback, create persistent references. Persistent references last until you
// call ByondValue_DecRef(). Calling ByondValue_IncRef() will also increase the
// persistent reference count.
//
// You MUST remember to call ByondValue_DecRef() to clean up any persistent
// references. Otherwise the objects will remain in memory until you call del()
// on them or the world reboots.
//
// NOTES:
//
// These only apply to refcounted types, not null or num. Any runtime errors
// that might happen when an object is garbage-collected as a result of
// ByondValue_DecRef() or ByondValue_DecTempRef() are ignored.
//
// Turfs are not refcounted in BYOND. Please note that whenever you resize
// the map, turf references change. For this reason, if you have a reference
// to a turf you're better off storing it as CByondXYZ coordinates instead.
//
// Calling del() from within BYOND will scan Byondapi's references and remove
// them. Any CByondValue structures you have in your library will not be
// cleared or changed by a garbage scan; they will simply become invalid.
//
// Byond_ThreadSync() is an exception to the temporary reference rule. When
// you call Byond_ThreadSync(), the callback function you supply will be called
// on BYOND's main thread, but any references created in Byondapi calls during
// that callback will be persistent. The reason for this is hopefully obvious:
// The only reason you'd call this function at all is because you're working
// with multiple threads and you would want all references to persist.

/// Increase the persistent reference count of an object used in Byondapi.
/// Blocks if not on the main thread.
///
/// Reminder: Calls only create temporary references when made on the main thread. On other threads, the references are already persistent.
/// @param src The object to incref
pub extern fn ByondValue_IncRef(src: *const CByondValue) void;

/// Mark a persistent reference as no longer in use by Byondapi.
/// This is IMPORTANT to call when you make Byondapi calls on another thread, since all the references they create are persistent.
///
/// This cannot be used for temporary references. See ByondValue_DecTempRef() for those.
///
/// Blocks if not on the main thread.
///
/// @param src The object to decref
pub extern fn ByondValue_DecRef(src: *const CByondValue) void;

/// Mark a temporary reference as no longer in use by Byondapi
/// Temporary references will be deleted automatically at the end of a tick, so this only gets rid of the reference a little faster.
/// Only works on the main thread. Does nothing on other threads.
/// @param src The object to decref
pub extern fn ByondValue_DecTempRef(src: *const CByondValue) void;
